--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -35,7 +35,7 @@ body{
 }
 .count-right{
   /* background: url('../img/BG.png'); */
-  min-height: 36rem;
+  /* min-height: 36rem; */
   /* background-size: cover; */
 }
 .space-side{
