--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -561,7 +561,7 @@ min-height: 27rem;
 }
 
 /* medium and up screens */
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
     
     .carousel-inner .carousel-item-end.active,
     .carousel-inner .carousel-item-next {
@@ -577,7 +577,7 @@ min-height: 27rem;
 .carousel-inner .carousel-item-end,
 .carousel-inner .carousel-item-start { 
   transform: translateX(0);
-}
+} */
 .cus-next, .cus-prev{
   position: relative;
   display: inline;
