--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -561,23 +561,23 @@ min-height: 27rem;
 }
 
 /* medium and up screens */
-/* @media (min-width: 768px) {
+@media (min-width: 768px) {
     
     .carousel-inner .carousel-item-end.active,
     .carousel-inner .carousel-item-next {
-      transform: translateX(25%);
+      transform: translateX(-0px);
     }
     
     .carousel-inner .carousel-item-start.active, 
     .carousel-inner .carousel-item-prev {
-      transform: translateX(-25%);
+      transform: translateX(70px);
     }
 }
 
 .carousel-inner .carousel-item-end,
 .carousel-inner .carousel-item-start { 
-  transform: translateX(0);
-} */
+  transform: translateX(70px);
+}
 .cus-next, .cus-prev{
   position: relative;
   display: inline;
