--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -174,6 +174,9 @@ border-radius: 1rem;
   padding:  1rem;
 }
 /* topography */
+.tx-40{
+  font-size: 2.5rem;
+}
 .tx-36{
   font-size: 2.25rem;
 }
@@ -342,6 +345,15 @@ tr.dotted-line td{
 .pos-rel{
   position: relative;
 }
+.down-box{
+  margin: auto;
+  position: absolute; 
+  bottom: 0; 
+  height: 3rem;
+  width: 4rem;
+  margin-bottom: -20px;
+  margin-left: -1.5rem;
+}
 
 .pos-rel .content-pos {
   position: absolute; /* Position the background text */
@@ -442,7 +454,9 @@ li .register-btn{
 .card-mobile{
 min-height: 27rem;
 }
-
+.next-mobile{
+  margin-bottom: 5.5rem;
+}
 
 }
 
@@ -618,4 +632,7 @@ min-height: 27rem;
 }
 .bg-grey-light{
   background-color: #f9fafa;
+}
+.next-mobile{
+  margin-bottom: 5.5rem;
 }
